# pyrainboweffect

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
doc/: LISEZ-MOI.md  LÉAME.md  api_documentation.md  读我档案.md
pychadelic/: __init__.py  __main__.py  pychadelic.py
pychedelic/: __init__.py  __main__.py
pyrainboweffect/: __init__.py  __main__.py  pyrainboweffect.py
test/: test_pychadelic.py  test_pychedelic.py  test_pyrainboweffect.py
