[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py35,py36,py36,py37,py38,py39

[testenv]
deps = coverage
       moviepy
       numpy
       opencv-python
       pycodestyle
       pydoc-markdown==2.1.3
       pylint
commands = pycodestyle pychedelic test setup.py
           pylint --disable=E1101 pychedelic test setup.py
           coverage run --source=pychedelic -m unittest discover
           coverage report -m
           python setup.py sdist
           bash -c 'pydocmd simple pychedelic++ pychedelic.rainbowify++ \
             pychedelic.psychedelic_gif++ pychedelic.psychedelic_mp4++ \
             > doc/api_documentation.md'
whitelist_externals = /bin/bash
"""
